--- a/config/database.yml
+++ b/config/database.yml
@@ -1,16 +1,26 @@
 development:
   adapter: postgresql
-  database: website_api_development
+  encoding: unicode
+  database: db/development
   pool: 5
   timeout: 5000
+  host: localhost
+
+# Warning: The database defined as "test" will be erased and
+# re-generated from your development database when you run "rake".
+# Do not set this db to the same as development or production.
 test:
   adapter: postgresql
-  database: website_api_test
+  encoding: unicode
+  database: db/test
   pool: 5
   timeout: 5000
+  host: localhost
 
 production:
   adapter: postgresql
-  database: website_api_production
+  encoding: unicode
+  database: db/production
   pool: 5
   timeout: 5000
+  host: localhost
